Ajustes finales en CSS

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,9 +8,11 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    width: 100%;
+    width: 60%;
     margin-right: auto;
     margin-left: auto;
+    border: double 3px cyan;
+    border-radius: 1rem;
     #sign {
         width: auto;
         height: 60px;
