--- a/scss/_exploracion.scss
+++ b/scss/_exploracion.scss
@@ -58,7 +58,7 @@
 /****** MOBILE RESPONSIVE 425px ******/ 
 @media (max-width: 425px){
     .exp-body{
-        background-image: url("../assets/img/lunas_responsive.jpg");
+        background-image: url("../assets/img/starship.jpg");
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
@@ -74,7 +74,7 @@
                 font-weight: normal;
                 font-size: 25px;
                 line-height: 30px;
-                color: #FFFFFF;
+                color: white;
             }
         }
     }
